
plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'org.beryx.runtime' version '1.11.4'
    id "com.github.johnrengelman.shadow" version "5.2.0"
    id 'idea'
}

repositories {
    mavenCentral()
}

def java_home = System.getenv('JAVA_HOME')//openJDK 11.0 causes the TLSv1.3 bug, 11.2 has the TLSv1.3 fix so the TLS bug is not a problem with that version

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'javax.inject:javax.inject:1'
}

javafx {
    version = "15"
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.swing']
}

shadowJar {
    manifest {
        attributes 'Implementation-Title': 'Reprex', 'Implementation-Version': '1.0'
    }
}

application {
    mainClassName = "sample.Launcher"

    applicationName = "Reprex"

    //beryx runtime will use the default JVM args
    applicationDefaultJvmArgs = [
            // '-Djavax.net.debug=ssl:handshake',//for debugging
            '-Djdk.tls.client.protocols=TLSv1.2',//force TLS v1.2 because there is a bug in JDK versions less that 12 with multiple requests using TLS v1.3 (Swiss Topo maps needs this)
            '--add-exports', 'java.base/javax.naming=ALL-UNNAMED',
            '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
            '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
            '--add-exports', 'javafx.controls/com.sun.javafx.charts=ALL-UNNAMED',
            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
            '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
            '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
            '--add-exports', 'javafx.graphics/com.sun.prism=ALL-UNNAMED',
            '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
            '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
            '--add-opens', 'javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED']
}

runtime {
    println "JavaHome path:${java_home}"
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
}
